# confluence-label-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  rules.example.yaml
confluence_label_bot/: __init__.py  __main__.py  bot.py  certs.py  client.py  config.py  health.py  rules.py
src/confluence_label_bot/: client.py  config.py
